# npcat

./: Dockerfile  README.md  SPEC.md  docker-compose.web.yml  docker-compose.yml  pyproject.toml  requirements.txt
docs/: README.md  architecture.md  cli.md  examples.md  reports.md
netcapanalysis/: __init__.py  analyzer.py  api.py  capture.py  charts.py  cli.py  multianalyze.py  report.py
netcapanalysis.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
reports/: report.md  report_conversation.mmd
web/: package.json
web/public/: index.html
web/src/: App.js
web/src/components/: AnalyzePanel.js  CapturePanel.js  FilesPanel.js  TimelinePanel.js
